# venice-cli

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  prompt.md  pyproject.toml  todo.md
.github/workflows/: CI.yml  build.yml
binup/: Cargo.toml
binup/src/: main.rs
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
shared/: Cargo.toml
shared/src/: build.rs  errors.rs  lib.rs  manifest.rs  runtime.rs  terminal.rs  upload.rs
src/: build.rs  errors.rs  lib.rs  main.rs  manifest.rs  new.rs  run.rs  runtime.rs  terminal.rs  upload.rs
src/typing/: typing.mpy  typing.py
tests/: integration_test.rs
tests/async-await/: Venice.toml  main.py  pyproject.toml
tests/async-await/src/: __init__.py
tests/competition/: main.py  pyproject.toml
tests/controller/: main.py  pyproject.toml
tests/multifile-test/: __init__.py  main.py  pyproject.toml  utils.py
tests/multifile-test/subpkg/: __init__.py  constants.py
tests/pypi-packaging/: main.py  pyproject.toml
tests/stress-test/: Venice.toml  main.py  pyproject.toml
tests/stress-test/src/: __init__.py
tests/typing/: Venice.toml  main.py  pyproject.toml
tests/typing/src/: __init__.py
venice_cli/: cli.py
