[package]
name = "venice-cli-core"
version = "0.1.0"
edition = "2024"
authors = ["Faisal Malallah <faisal@fibn.cc>", "Aadish Verma <mail@aadishv.dev>"]

[lib]
crate-type = ["cdylib"]
name = "venice_cli_core"

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
clap = { version = "4.5.40", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
tokio = { version = "1.47.1", features = ["full"] }
semver = "1.0.26"
vex-v5-serial = {version = "0.5.1", default-features = false, features = [
    "serial",
]}
indicatif = "0.18.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_ini = "0.2.0"
thiserror = "2.0.16"
toml = "0.9.5"
toml_edit = "0.23.7"

[dependencies.venice-program-table]
path = "../venice-program-table"
features = ["builder"]
