[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "venice-cli"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
venice-cli = "venice_cli.cli:main"

[tool.maturin]
bindings = "pyo3"
module-name = "venice_cli._core"
