[package]
name = "venice"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
directories = "6.0.0"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = "0.12.23"
shared = { path = "../shared" }
tokio = "1.47.1"

[dependencies.venice-program-table]
git = "https://github.com/venice-v5/venice-program-table.git"
rev = "2fa8d392bb45a7b69e93f5a7e668ad4bca18007d"
features = ["builder"]
