[package]
name = "venice"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
shared = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
vex-v5-serial = { workspace = true }
