[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
directories = "6.0.0"
miette = "7.6.0"
reqwest = "0.12.23"
semver = "1.0.26"
serde = "1.0.219"
serde_ini = "0.2.0"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = "1.47.1"
toml = "0.9.5"
vex-v5-serial = "0.3.3"

[dependencies.venice-program-table]
git = "https://github.com/venice-v5/venice-program-table.git"
rev = "2fa8d392bb45a7b69e93f5a7e668ad4bca18007d"
features = ["builder"]
