[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
directories = "6.0.0"
serde = "1.0.219"
serde_ini = "0.2.0"
serde_json = "1.0.143"
thiserror = "2.0.16"
toml = "0.9.5"
semver = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
vex-v5-serial = { workspace = true }
miette = { workspace = true }

[dependencies.venice-program-table]
git = "https://github.com/venice-v5/venice-program-table.git"
rev = "2fa8d392bb45a7b69e93f5a7e668ad4bca18007d"
features = ["builder"]
